security: Fix critical vulnerabilities and improve code quality
General Score Improvement: 4.6/10 -> 6.8/10 (+2.2)

Security Improvements (3/10 -> 7/10, +4.0):
- Replace hardcoded credentials with environment variables
- Fix CORS configuration (restrict origins from * to whitelist)
- Secure file upload endpoint (require authentication)
- Secure actuator endpoints (require ADMIN role)
- Add rate limiting filter (100 req/60sec configurable)
- Add password validation (complexity requirements)
- Increase BCrypt strength from 10 to 12

Code Quality Improvements:
- Fix TODO comment in TenantService.getCurrentUserId()
- Fix soft delete inconsistency in removeTenantFromUser()
- Update logging level from DEBUG to INFO (configurable)
- Update .gitignore (exclude uploads/, .env files)

New Files:
- RateLimitFilter.java - In-memory rate limiting implementation
- ValidPassword.java - Password validation annotation
- PasswordConstraintValidator.java - Password complexity validator
- Analyze2.md - Post-fix security analysis report

Modified Files:
- SecurityConfig.java - CORS, Actuator, File upload security
- application.properties - Environment variable configuration
- CreateUserRequest.java - Add @ValidPassword annotation
- TenantService.java - Fix TODO and soft delete issues
- .gitignore - Add uploads/, .env patterns

Resolves Critical Issues:
- CWE-798: Use of Hard-coded Credentials
- CWE-942: Permissive Cross-domain Policy
- CWE-285: Improper Authorization
- CWE-770: Allocation of Resources Without Limits
- CWE-521: Weak Password Requirements